docs/kubernetes/deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: lamachine-deployment
spec:
  selector:
    matchLabels:
      app: lamachine
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: lamachine
        external-ingress: enabled
    spec:
      containers:
      - name: lamachine
        image: your.docker.registry/lamachine
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "1000m"
            memory: "8Gi"
        ports:
        - containerPort: 80
