docs/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: lamachine-http
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: lamachine
status:
  loadBalancer: {}
