docs/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lamachine
spec:
  rules:
  - host: your.domain
    http:
      paths:
      - backend:
          serviceName: lamachine-http
          servicePort: http
        path: /
